# hadron

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Kconfig  README.md  _typos.toml  build.rhai  codegen.toml  crates.toml  gluon.rhai  hadron.toml  justfile  limine.conf  rust-toolchain.toml  taplo.toml
crates/boot/limine/: Cargo.toml  README.md
crates/boot/limine/src/: paging.rs  request.rs  response.rs
crates/boot/uefi/: Cargo.toml  README.md
crates/boot/uefi/src/: lib.rs  status.rs
crates/core/hadron-core/: Cargo.toml  README.md
crates/core/hadron-core/src/: alt_fn.rs  cpu_features.rs  cpu_local.rs  id.rs  lib.rs  mem.rs  safety.rs  sched.rs  task.rs
crates/core/hadron-intrinsics/: Cargo.toml
crates/hadron-bench/: Cargo.toml
crates/hadron-bench/src/: args.rs  bencher.rs  lib.rs  serial.rs  stats.rs  wire.rs
crates/hadron-codegen/: Cargo.toml
crates/hadron-codegen/src/: config.rs  font.rs
crates/hadron-core/: Cargo.toml
crates/hadron-core/src/sync/: condvar.rs  heap_waitqueue.rs  irq_spinlock.rs  lockdep.rs  loom_compat.rs  mod.rs  mutex.rs  semaphore.rs  seqlock.rs  spinlock.rs  stress.rs  test_waker.rs
crates/hadron-mmio/: Cargo.toml
crates/hadron-perf/: Cargo.toml
crates/hadron-perf/src/: bench_analysis.rs  flamegraph.rs  lib.rs  output.rs  profile_analysis.rs  symbol_resolver.rs  wire.rs
crates/hadron-syscall/: Cargo.toml
crates/hadron-syscall/src/: lib.rs
crates/limine/: Cargo.toml
crates/limine/src/: file.rs  framebuffer.rs  lib.rs  memmap.rs  module.rs  mp.rs  request.rs  response.rs
crates/linkset/: Cargo.toml
crates/linkset/src/: lib.rs
crates/parse/acpi/: Cargo.toml  README.md
crates/parse/acpi/src/: bgrt.rs  dmar.rs  fadt.rs  hpet.rs  ivrs.rs  lib.rs  madt.rs  mcfg.rs  resource.rs  rsdp.rs  rsdt.rs  sdt.rs  slit.rs  srat.rs
crates/parse/binparse/: Cargo.toml  README.md
crates/planck-noalloc/: Cargo.toml  README.md
crates/planck-noalloc/src/: ringbuf.rs  vec.rs
kernel/driver-api/: Cargo.toml
kernel/driver-api/src/: input.rs  lib.rs
kernel/fs/: Cargo.toml  README.md
kernel/fs/src/: devfs.rs  file.rs  lib.rs  vfs.rs
kernel/hadron-driver-api/: Cargo.toml
kernel/hadron-driver-api/src/: block.rs  category.rs  driver.rs  error.rs  framebuffer.rs  input.rs  lib.rs  pci.rs  registration.rs  resource.rs  serial.rs  services.rs
kernel/hadron-drivers/: Cargo.toml  Kconfig
kernel/hadron-drivers/src/: bochs_vga.rs  bus.rs  hpet.rs  i8042.rs  irq.rs  keyboard_async.rs  lib.rs  pci_stub.rs  pic.rs  registry.rs  uart16550.rs
kernel/hadron-drivers/src/ahci/: command.rs  hba.rs  mod.rs  port.rs  regs.rs
kernel/hadron-drivers/src/apic/: local_apic.rs
kernel/hadron-drivers/src/block/: mod.rs  ramdisk.rs
kernel/hadron-drivers/src/display/: bochs_vga.rs  mod.rs
kernel/hadron-drivers/src/e1000e/: mod.rs  regs.rs
kernel/hadron-drivers/src/fs/: fat.rs  initramfs.rs  iso9660.rs  mod.rs  ramfs.rs
kernel/hadron-drivers/src/input/: i8042.rs  keyboard_async.rs  mod.rs  mouse_async.rs
kernel/hadron-drivers/src/interrupt/: pic.rs
kernel/hadron-drivers/src/pci/: cam.rs  caps.rs  enumerate.rs  ich9_tco.rs  mod.rs  msix.rs  stub.rs
kernel/hadron-drivers/src/serial/: mod.rs  serial_async.rs  uart16550.rs
kernel/hadron-drivers/src/timer/: hpet.rs  mod.rs  pit.rs  tsc.rs
kernel/hadron-drivers/src/virtio/: block.rs  gpu.rs  mod.rs  net.rs  pci.rs  queue.rs
kernel/hadron-kernel/: Cargo.toml  Kconfig  build.rs
kernel/hadron-kernel/benches/: alloc_bench.rs
kernel/hadron-kernel/src/: backtrace.rs  boot.rs  bus.rs  config.rs  ktest.rs  ktest_tests.rs  lib.rs  log.rs  percpu.rs  services.rs  sync.rs  time.rs
kernel/hadron-kernel/src/arch/: mod.rs
kernel/hadron-kernel/src/driver_api/: acpi_device.rs  capability.rs  category.rs  device_path.rs  dyn_dispatch.rs  framebuffer.rs  hw.rs  lifecycle.rs  mod.rs  net.rs  pci.rs  probe_context.rs  registration.rs  resource.rs  services.rs
kernel/hadron-kernel/src/drivers/: dev_fb.rs  dev_mouse.rs  device_registry.rs  early_console.rs  early_fb.rs  font_8x16.rs  font_console.rs  irq.rs  mod.rs  registry.rs
kernel/hadron-kernel/src/fs/: block_adapter.rs  fat.rs  (+10 more)
kernel/hadron-kernel/tests/: backtrace_test.rs  basic_boot.rs  heap_test.rs  interrupts_test.rs  pmm_test.rs  profiling_emit_test.rs  sanitizer_test.rs  syscall_test.rs  trace_test.rs
kernel/hadron-pci/: Cargo.toml
kernel/hadron-pci/src/: caps.rs  enumerate.rs  lib.rs  regs.rs  tests.rs
kernel/ipc/: Cargo.toml
kernel/mm/: Cargo.toml  README.md
kernel/mm/src/: address_space.rs  heap.rs  hhdm.rs  layout.rs  lib.rs  mapper.rs  pmm.rs  region.rs  vmm.rs  zone.rs
kernel/net/: Cargo.toml
kernel/net/src/: ethernet.rs  ipv4.rs  lib.rs  task.rs
kernel/sched/: Cargo.toml  README.md
kernel/sched/src/: executor.rs  lib.rs  primitives.rs  timer.rs  waker.rs
tools/gluon/: Cargo.toml
tools/gluon/src/: analyzer.rs  bench.rs  cache.rs  cli.rs  compile.rs  config.rs  crate_graph.rs  engine.rs  fmt.rs  kani.rs  main.rs  menuconfig.rs  model.rs  model_cache.rs  perf_cmd.rs  run.rs  rustc_info.rs  scheduler.rs  shuttle.rs  sysroot.rs  test.rs  validate.rs  vendor.rs  verbose.rs
tools/gluon/tests/: integration.rs
tools/hadron-build/: Cargo.toml
tools/hadron-build/src/: analyzer.rs  cli.rs  compile.rs  config.rs  crate_graph.rs  engine.rs  fmt.rs  main.rs  menuconfig.rs  model.rs  run.rs  scheduler.rs  sysroot.rs  test.rs  validate.rs
userspace/hadron-libc/: Cargo.toml
userspace/hadron-libc/core/: Cargo.toml
userspace/hadron-libc/include/: assert.h  byteswap.h  ctype.h  dirent.h  dlfcn.h  endian.h  errno.h  fcntl.h  fenv.h  float.h  getopt.h  hadron_query.h  iconv.h  inttypes.h  libgen.h  limits.h  locale.h  math.h  poll.h  pthread.h  pwd.h  regex.h  resolv.h  sched.h  semaphore.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  termios.h  time.h  unistd.h  wchar.h  wctype.h
userspace/hadron-libc/src/: lib.rs  stubs.rs
xtask/: Cargo.toml
xtask/src/: build.rs  cargo.rs  codegen.rs  config.rs  hbtf.rs  initrd.rs  main.rs  test.rs
(+761 files in other folders)
