[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
hadris-cpio = { workspace = true, features = [ "std", "write" ] }
hadron-codegen = { workspace = true }
hadron-dwarf = { workspace = true }
hadron-elf = { workspace = true }
rustc-demangle = "0.1"
serde = { version = "1", features = [ "derive" ] }
toml = "0.8"
xshell = "0.2"
