[package]
name = "hadron-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Microbenchmark harness for Hadron OS kernel benchmarks"

[lib]
test = false
bench = false
doctest = false

[features]
default = [ "limine" ]
limine = [ "dep:limine" ]

[dependencies]
limine = { workspace = true, optional = true }

[lints]
workspace = true
