[package]
name = "hadron-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Build-time code generator for Hadron kernel (font rasterization, etc.)"

[dependencies]
fontdue = "0.9"
serde = { version = "1", features = [ "derive" ] }
toml = "0.8"
