[package]
name = "hadron-perf"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
hadron-elf = { path = "../elf" }
inferno = { version = "0.12", default-features = false, features = ["nameattr"] }
rustc-demangle = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
