[package]
name = "hadron-linkset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
bench = false
test = false
doctest = false

[dependencies]

[lints]
workspace = true
