[package]
name = "hadron-driver-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Driver API types and traits for Hadron OS"

[lib]
bench = false
doctest = false

[dependencies]
hadron-acpi = { workspace = true, features = ["alloc"] }
hadron-core = { workspace = true }

[lints]
workspace = true
