[package]
name = "hadron-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
bitflags = { workspace = true }
hadron-core = { workspace = true }
hadron-syscall = { workspace = true }

[lints]
workspace = true
