[package]
name = "hadron-drivers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Hardware drivers for Hadron OS"

[lib]
bench = false
doctest = false

[dependencies]
bitflags = { workspace = true }
hadron-core = { workspace = true }
hadron-driver-api = { workspace = true }

[lints]
workspace = true
