[package]
name = "hadron-drivers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Hardware drivers for Hadron OS"

[lib]
bench = false
doctest = false

[dependencies]
bitflags = { workspace = true }
hadris-cpio = { workspace = true, features = [ "read", "alloc" ] }
hadris-fat = { workspace = true, features = [ "read", "write", "alloc", "lfn" ] }
hadris-io = { workspace = true }
hadris-iso = { workspace = true, features = [ "read", "alloc" ] }
hadron-kernel = { workspace = true }

[lints]
workspace = true
