[package]
name = "hadron-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
bench = false
doctest = false

[dependencies]
bitflags = { workspace = true }
hadris-cpio = { workspace = true, features = [ "read", "alloc" ] }
hadris-io = { workspace = true }
hadron-acpi = { workspace = true }
hadron-core = { workspace = true }
hadron-driver-api = { workspace = true }
hadron-drivers = { workspace = true }
hadron-elf = { workspace = true }
noalloc = { workspace = true }

[dev-dependencies]
hadron-core = { workspace = true }
hadron-test = { workspace = true, features = [ "limine" ] }
limine = { workspace = true }
noalloc = { workspace = true }

[lints]
workspace = true
