[package]
name = "hadron-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
# Integration tests are QEMU-only (built by gluon, not cargo).
autotests = false

[lib]
bench = false
doctest = false

[dependencies]
bitflags = { workspace = true }
hadris-io = { workspace = true }
hadron-acpi = { workspace = true }
hadron-elf = { workspace = true }
hadron-linkset = { workspace = true }
hadron-syscall = { workspace = true, features = [ "kernel" ] }
noalloc = { workspace = true }

[dev-dependencies]
hadron-test = { workspace = true, features = [ "limine" ] }
limine = { workspace = true }
noalloc = { workspace = true }

[lints]
workspace = true
