[package]
name = "hadron-pci"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "PCI enumeration and capability parsing for Hadron OS"

[lib]
bench = false
doctest = false

[dependencies]
hadron-driver-api = { workspace = true }

[lints]
workspace = true
