[package]
name = "hadron-mm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hadron-core = { workspace = true }
planck-noalloc = { workspace = true }
bitflags = { workspace = true }

[lints]
workspace = true
