[package]
name = "hadron-sched"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
hadron-core = { workspace = true }
planck-noalloc = { workspace = true }

[lints]
workspace = true
