[package]
name = "gluon"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1"
cargo-image-runner = { version = "0.4", default-features = false, features = ["bios", "limine", "iso", "qemu"] }
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
crossterm = "0.28"
flate2 = "1"
hadris-cpio = { version = "1.0.1", default-features = false, features = ["std", "write"] }
hadron-dwarf = { path = "../../crates/dwarf" }
hadron-elf = { path = "../../crates/elf" }
inferno = { version = "0.12", default-features = false, features = ["nameattr"] }
ratatui = "0.29"
rhai = { version = "1", features = ["sync"] }
rustc-demangle = "0.1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"
walkdir = "2"
