[package]
name = "limine"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish = true

[lib]
test = false
bench = false
doctest = false

[dependencies]
bitflags = { workspace = true }

[lints]
workspace = true
