[package]
name = "hadron-binparse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish = true

[dependencies]
hadron-binparse-macros = { path = "../hadron-binparse-macros" }

[lints]
workspace = true
